<resources>
    <string name="app_name">Earthquake Watcher</string>
    <string name="title_activity_maps">Map</string>
    <string name="title">Title</string>
    <string name="magnitude">Magnitude</string>
    <string name="more_info">More info...</string>
    <string name="todo">TODO</string>
    <string name="more_information">More Information</string>
    <string name="information">information</string>
    <string name="Close">close</string>
</resources>
