<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iconimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_dialog_alert"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/wintitle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignStart="@+id/iconimage"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="50dp"/>

            <TextView
                android:id="@+id/magnitudetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iconimage"
                android:text="@string/magnitude"
                android:layout_marginStart="51dp"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/moreinfobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wintitle"
                android:layout_marginStart="44dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/magnitudetext"
                android:background="@android:color/transparent"
                android:text="@string/more_info"
                android:textColor="@color/colorAccent"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>