<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="40dp">

                <Button
                    android:id="@+id/dismisstopbutton"
                    android:layout_width="39dp"
                    android:layout_height="37dp"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/ic_menu_close_clear_cancel" />

                <TextView
                    android:id="@+id/moreinfotext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_information"
                    android:layout_below="@+id/dismisstopbutton"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/detailstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/moreinfotext"
                    android:text="@string/information"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp" />

                <WebView
                    android:id="@+id/webtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detailstext"/>

                <Button
                    android:id="@+id/dismissbottombutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/webtext"
                    android:background="@color/colorAccent"
                    android:text="@string/Close"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>